Get all characters with mapped movies + add Lombok anno - Builder,JsonInclude